# STKO_to_python

./: .gitignore  CDATA.py  ERRORS.py  GET_MODEL_INFO.py  MAPPING.py  MCPO_VirtualDataset.py  NODES.py  ON_ELEMENTS.py  PLOTTER.py  README.md  __init__.py  mkdocs.yml  pyproject.toml
docs/: ElementResults.md  architecture-refactor-proposal.md  architecture.md  elements_guide.md  index.md  mpco_format_conventions.md
docs/api/: canonical-names.md  element-results.md
docs/cookbook/: 05-selector-and-mask-pipeline.md  index.md
examples/: solid_mixed_example.py  usage_tour.py
src/STKO_to_python/: __init__.py
src/STKO_to_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/STKO_to_python/MPCOList/: MPCOResults.py  MPCOdf.py  __init__.py
src/STKO_to_python/STKO_to_python.egg-info/: PKG-INFO  top_level.txt
src/STKO_to_python/core/: __init__.py  dataclasses.py  dataset.py  element_selection.py  selection.py
src/STKO_to_python/dataprocess/: __init__.py  aggregation.py  aggregator.py
src/STKO_to_python/elements/: __init__.py  canonical.py  element_manager.py  element_results.py  element_results_plotting.py  elements.py  result_mask.py  selector.py
src/STKO_to_python/examples/: HDF5UtilsFunctionality.ipynb  ObjectInstanseExample.ipynb  elements_plots_example.ipynb  nodalExtranction.ipynb  nodal_plots_example.ipynb
src/STKO_to_python/io/: __init__.py  hdf5_utils.py  info.py  meta_parser.py  time_utils.py  utilities.py
src/STKO_to_python/model/: __init__.py  cdata.py  model_info.py
src/STKO_to_python/nodes/: __init__.py  nodal_results_dataclass.py  nodes.bak.py  nodes.py
src/STKO_to_python/plotting/: __init__.py  plot.py  plot_dataclasses.py  plot_nodes.py
src/STKO_to_python/query/: __init__.py  element_query_engine.py  nodal_query_engine.py
src/STKO_to_python/results/: __init__.py  element_results_dataclass.py  element_results_info.py  nodal_results_dataclass.py  nodal_results_info.py  nodal_results_plotting.py
src/STKO_to_python/selection/: resolver.py
src/STKO_to_python/utilities/: __init__.py  gauss_points.py  h5_repair_tool.py  shape_functions.py
tests/: conftest.py  test_dataset_and_model_info.py  test_element_results_api.py  test_selection_api.py  test_selection_set_resolution.py
tests/integration/: test_aggregation_forwarders.py  test_examples_end_to_end.py  test_fixture_snapshots.py  test_gp_xi_and_at_ip.py
tests/unit/: test_aggregation_engine_skeleton.py  test_element_bucket_grouping.py  test_gauss_points.py  test_manager_aliases.py  test_public_api.py  test_shape_functions.py  test_tri_tet_primitives.py
tests/unit/elements/: test_result_mask.py  test_selector.py
tests/unit/io/: test_dataset_pool_integration.py
tests/unit/query/: test_element_query_engine.py  test_nodal_query_engine.py
tests/unit/selection/: test_selection_resolver.py
