[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "STKO_to_python"
version = "0.1.0"
description = "STKO tools for Python"
readme = "README.md"
authors = [
    {name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    # numpy: numerical arrays used everywhere
    "numpy",
    # h5py: .mpco HDF5 reader
    "h5py",
    # matplotlib: plotting backend for Plot / NodalResultsPlotter
    "matplotlib",
    # jupyter: examples/notebooks smoke-tested in CI
    "jupyter",
    # tables: PyTables backend used by some pandas HDF paths
    "tables",
    # pandas: result DataFrames are the primary return type
    "pandas",
    # scipy: aggregation helpers (interpolation, signal processing)
    "scipy",
]

[project.optional-dependencies]
# Installed with: pip install -e ".[test]"
test = [
    "pytest>=7.4",
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/STKO_to_python"
"Bug Tracker" = "https://github.com/nmorabowen/STKO_to_python/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}} 

[tool.setuptools.package-data]
"*" = ["*.ipynb"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "fixture: tests that require the golden .mpco fixture (skipped if absent)",
    "slow: tests that take more than ~1s",
]
filterwarnings = [
    "error::DeprecationWarning:STKO_to_python.*",
]